# kinucnc

./: .gitmodules  CMakeLists.txt  LICENSE  README  README.md
kinu-core/: CMakeLists.txt
kinu-core/include/kinu/: bspline_processors.h  geometry.h  shape_processors.h  svg.h
kinu-core/samples/: CMakeLists.txt
kinu-core/samples/plotter/: CMakeLists.txt
kinu-core/samples/plotter/src/: mainwindow.ui  plotter.cpp  svg_plotter.cpp  svg_plotter.h  svg_plotter.ui
kinu-core/samples/test-svg/: CMakeLists.txt  mylabel.cpp  mylabel.h  test.cpp
kinu-core/src/: bspline_processors.cpp  geometry.cpp  shape_processors.cpp  svg.cpp
kinu-core/test/: CMakeLists.txt  test_svg.cpp
kinu-svg/: CMakeLists.txt
kinu-svg/include/kinu/: svg.h
kinu-svg/src/: svg.cpp
kinu-svg/test/: CMakeLists.txt  test_svg.cpp
